<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha_66"
    android:gravity="center">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/default_corner_radius"
        android:layout_marginStart="@dimen/spacing_layout_large"
        android:layout_marginEnd="@dimen/spacing_layout_large">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_gravity="center">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/spacing_layout_medium">
                
                <TextView
                    android:id="@+id/title_riddle"
                    style="@style/Text.Title"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_short"
                    android:gravity="center"/>
            
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/riddle_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">
                
                <TextView
                    android:id="@+id/riddle_question"
                    style="@style/Text.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_long"
                    android:padding="@dimen/spacing_layout_medium"
                    android:gravity="center"
                    android:textAlignment="textStart"/>
                
                <LinearLayout
                    android:id="@+id/hint_container"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/spacing_layout_small"
                    android:layout_marginBottom="@dimen/spacing_layout_small"
                    android:background="@color/colorInstagram"
                    android:gravity="center">
                
                    <TextView
                        style="@style/Text.Title"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_hint"
                        android:gravity="center"/>
                
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_see_hint"
                        style="@style/Button.Flat.Bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_see_hint"
                        android:layout_gravity="center"
                        android:drawableRight="@drawable/ic_eye"
                        app:icon="@drawable/ic_eye"/>
                    
                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/hint"
                        style="@style/Text.SubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_long"
                        android:paddingStart="@dimen/spacing_layout_medium"
                        android:paddingEnd="@dimen/spacing_layout_medium"
                        android:gravity="center"
                        android:textAlignment="textStart"
                        android:maxLines="2"
                        android:visibility="gone"/>
                
                </LinearLayout>
                
                <TextView
                    style="@style/Text.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_answer"
                    android:gravity="center"/>
                
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.InputLayout.Riddle"
                    app:hintTextAppearance="@style/TextInput.Hint.Appearance.Primary"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_margin="@dimen/spacing_layout_medium">
                    
                    <EditText
                        android:id="@+id/editext_answer"
                        style="@style/EditText.Profile"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_layout_xxxlarge"
                        android:layout_weight="1"
                        android:importantForAutofill="noExcludeDescendants"
                        />
                
                </com.google.android.material.textfield.TextInputLayout>
                
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_validate_answer"
                    style="@style/Button.Flat.Bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_confirm"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/ic_eye"
                    android:layout_marginBottom="@dimen/spacing_layout_medium"/>
        
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/success_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/spacing_layout_large"
                android:visibility="gone">
                
                <ImageView
                    android:id="@+id/image_success_container"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/image_clap" />
                
                <TextView
                    android:id="@+id/text_success_container"
                    style="@style/Text.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_success_riddle"
                    android:gravity="center"
                    android:layout_margin="@dimen/spacing_layout_large"/>
            
                <TextView
                    style="@style/Text.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_remind_answer"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/spacing_layout_medium"/>
            
                <TextView
                    android:id="@+id/answer_success_container"
                    style="@style/Text.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lorem_short"
                    android:textSize="@dimen/text_size_title_card"
                    android:textAllCaps="true"
                    android:layout_marginBottom="@dimen/spacing_layout_large"/>
                
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_continue"
                    style="@style/Button.Flat.Bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_continue"/>
                
            </LinearLayout>
            
        </LinearLayout>
        
    </androidx.cardview.widget.CardView>
    
</LinearLayout>