<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha_66"
    android:gravity="center">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/default_corner_radius"
        android:layout_margin="@dimen/height_action_button"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/spacing_layout_medium">
            
                <TextView
                    android:id="@+id/title_riddle"
                    style="@style/Text.Title"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_instruction"
                    android:gravity="center"/>
        
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_margin="@dimen/spacing_layout_large">
                
                <TextView
                    android:id="@+id/instruction_text"
                    style="@style/Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_advice_scan_qr_code"/>
                
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    style="@style/Button.Flat.Bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_lets_go"
                    android:layout_marginTop="@dimen/spacing_layout_large"
                    android:layout_gravity="center"/>
            
            </LinearLayout>

        </LinearLayout>
    
    </androidx.cardview.widget.CardView>

</LinearLayout>